[package]
name = "dices-server-intrisics"
description = "Definition of the server intrisics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dices-ast = { path = "../../ast" }
rand_xoshiro = { version = "0.6", features = ["serde1"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
bincode = "2.0.0-rc.3"
chrono = "0.4"
tokio = "1.43"
futures = "0.3.31"
