[package]
name = "dices-server-migration"
description = "Utility for migration of the database of a `dices` server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "1.0.0"
features = ["runtime-tokio-rustls", "sqlx-postgres"]
